--- a/App/eatndrink/src/pages/home/home.scss
+++ b/App/eatndrink/src/pages/home/home.scss
@@ -1,3 +1,30 @@
 page-home {
+  .row-center {
+    height: 100%;
+  }
 
+  .button-facebook {
+    color: #fff;
+    background-color: #3b5998;
+  }
+
+  .button-googleplus {
+    color: #fff;
+    background-color: #d34836;
+  }
+
+  .button-twitter {
+    color: #fff;
+    background-color: #0084b4;
+  }
+
+  .app-logo {
+    width: 100%;
+    height: auto;
+    background-color: transparent;
+  }
+
+  .section-login button {
+    padding: 20px 0px;
+  }
 }
